<resources>
    <string name="app_name">Motovskikh Tests</string>
    <string name="skeleton_button">A skeleton</string>
    <string name="eye_button">An eye</string>
    <string name="teeth_button">Teeth</string>
    <string name="hand_button">A hand</string>
    <string name="neuron_button">A neuron</string>
    <string name="nephron_button">A nephron</string>
    <string name="skull_button">A skull</string>
    <string name="heart_button">A heart</string>
    <string name="ear_button">An ear</string>
    <string name="tests_theme">Human biology</string>
    <string name="feedback_button">Contact us</string>
    <string name="skeleton_test_link">https://motovskikh.ru/en/skeleton/</string>
    <string name="eye_test_link">https://motovskikh.ru/en/eye/</string>
    <string name="teeth_test_link">https://motovskikh.ru/en/tooth/</string>
    <string name="hand_test_link">https://motovskikh.ru/en/hand/</string>
    <string name="neuron_test_link">https://motovskikh.ru/en/neuron/</string>
    <string name="nephron_test_link">https://motovskikh.ru/en/nephron/</string>
    <string name="skull_test_link">https://motovskikh.ru/en/skull/</string>
    <string name="feedback_link">https://motovskikh.ru/en/dazer/</string>
    <string name="warning">Our app is free but you will see some ad</string>
</resources>