<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainActivity">

    <com.example.motovskikh_tests.BackgroundPainter
        android:id="@+id/backgroundPainter"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.example.motovskikh_tests.BackgroundPainter>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/semi_transparent_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintBottom_toTopOf="@+id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/app_name"
                android:textAlignment="viewStart"
                android:textAppearance="@style/HeadingTextStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/buttonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bone_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/skeleton_button"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/CasualTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/eye_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/eye_button"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/CasualTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/teeth_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/teeth_button"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/CasualTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/hand_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/hand_button"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/CasualTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/neuron_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/neuron_button"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/CasualTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/nephron_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/nephron_button"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/CasualTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/scull_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:text="@string/scull_button"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/CasualTextStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/feedbackButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:background="@drawable/button_background"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/feedback_button"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/CasualTextStyle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>